# agent-usage-tray

./: .gitignore  AGENTS.md  Agent Usage Prototype (standalone).html  Cargo.toml  README.md
crates/agent-usage-cli/: Cargo.toml
crates/agent-usage-cli/src/: cache.rs  main.rs  output.rs
crates/agent-usage-core/: Cargo.toml
crates/agent-usage-core/src/: budget.rs  cache.rs  error.rs  lib.rs  pace.rs  projection.rs  provider.rs  schema.rs  time.rs
crates/agent-usage-providers/: Cargo.toml
crates/agent-usage-providers/src/: claude.rs  codex.rs  creds.rs  http.rs  hyper.rs  lib.rs
docs/ADR/: 001-agent-agnostic-architecture.md  002-pace-and-work-day-model.md  003-caching-and-resilience.md  004-macos-frontend.md
macos/: build-app.sh  render-logos.sh
macos/AgentUsageMenuBar/: Package.swift
macos/AgentUsageMenuBar/Resources/: Info.plist
macos/AgentUsageMenuBar/Sources/AgentUsageMenuBar/: Assets.swift  DashboardView.swift  DataController.swift  Model.swift  Settings.swift  SettingsView.swift  StatusItemController.swift  main.swift
